--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   <ul>
     <li><a href="1_all_customer_points_map.html">Customer Points Map</a></li>
     <li><a href="2_all_customer_heatmap.html">Customer Heatmap</a></li>
-    <li><a href="3_all_customer_heatmap_showroom.html">Heatmap – Showroom</a></li>
-    <li><a href="4_all_customer_heatmap_showroom_coverage.html">Heatmap – Showroom Coverage</a></li>
-    <li><a href="5_all_customer_points_showroom_coverage.html">Points – Showroom Coverage</a></li>
-    <li><a href="6_all_customer_income_distribution.html">Income Distribution</a></li>
-    <li><a href="7_all_customer_age_distribution.html">Age Distribution</a></li>
+    <li><a href="3_all_customer_heatmap_showroom.html">Customer Heatmap with Showroom</a></li>
+    <li><a href="4_all_customer_heatmap_showroom_coverage.html">Customer Heatmap with Showroom Radiation (12 miles)</a></li>
+    <li><a href="5_all_customer_points_showroom_coverage.html">Customer Showroom Coverage</a></li>
+    <li><a href="6_all_customer_income_distribution.html">Customer Income Distribution</a></li>
+    <li><a href="7_all_customer_age_distribution.html">Customer Age Distribution</a></li>
+    <li><a href="8_all_customer_house_value_distribution.html">Customer House Value Distribution</a></li>
   </ul>
 </body>
 </html>
